[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
request = "0.0.8"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
