[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap ={ version ="3.2.20", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9.11"
similar = "2.2.0"
tokio ={ version = "1.21.0", features = ["full"]}